<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OTPP Meeting Rooms</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_maps">Maps</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_directory_list">Items</string>
    <string name="title_directory_detail">Directory Detail</string>
    <string name="title_floorplan_list">Items</string>
    <string name="title_floorplan_detail">Floorplan Detail</string>
    <string name="title_activity_floor_plan">FloorPlan</string>
    <string name="title_activity_book_room">Book A Room</string>
    <string name="title_activity_secondfloor">Second Floor</string>
    <string name="bookaroom">Please enter the following information</string>
    <string name="name">Full Name*</string>
    <string name="email">Email</string>
    <string name="detail">Details</string>
    <string name="date">Date* (MM/DD/YY)</string>
    <string name="time">Time*</string>
    <string name="room">Invitees</string>
    <string name="title_activity_thirdfloor">Third Floor</string>
    <string name="title_activity_fourth_floor">Fourth Floor</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_successful">Successful</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_main_activity2">OTPP Meeting Rooms</string>
    <string name="title_activity_second">Second Floor</string>
    <string name="title_activity_third">Third Floor</string>
    <string name="title_activity_fourth">Fourth Floor</string>
    <string name="title_activity_fifth">Fifth Floor</string>
    <string name="title_activity_sixth">Sixth Floor</string>
    <string name="title_activity_seventh">Seventh Floor</string>
    <string name="title_activity_eighth">Eighth Floor</string>
    <string name="title_activity_twelfth">Twelfth Floor</string>
    <string name="title_activity_fifteenth">Fifteenth Floor</string>
    <string name="title_activity_sixteenth">Sixteenth Floor</string>
    <string name="title_activity_eighteenth">Eighteenth Floor</string>

</resources>